--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,5 @@ add_subdirectory(HashTableChains)
 add_subdirectory(HashTableIndirectAdressing)
 add_subdirectory(BTree)
 add_subdirectory(AvlTree)
+add_subdirectory(Singleton)
+add_subdirectory(Command)
