add visitor pattern

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,4 @@ add_subdirectory(BTree)
 add_subdirectory(AvlTree)
 add_subdirectory(Singleton)
 add_subdirectory(Command)
+add_subdirectory(Observer)
