add visitor pattern.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,4 @@ add_subdirectory(AvlTree)
 add_subdirectory(Singleton)
 add_subdirectory(Command)
 add_subdirectory(Observer)
+add_subdirectory(Visitor)
