--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,3 +16,4 @@ add_subdirectory(Singleton)
 add_subdirectory(Command)
 add_subdirectory(Observer)
 add_subdirectory(Visitor)
+add_subdirectory(RingBuffer)
