add ring buffer deque realisation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,4 @@ add_subdirectory(Command)
 add_subdirectory(Observer)
 add_subdirectory(Visitor)
 add_subdirectory(RingBuffer)
+add_subdirectory(RingBufferDeq)
